--- a/pom.xml
+++ b/pom.xml
@@ -124,5 +124,14 @@
         </repository>
 
     </repositories>
-
+<distributionManagement>
+        <repository>
+            <id>maven-releases</id>
+            <url>http://prod.nexus.wa-llet.com/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>maven-snapshots</id>
+            <url>http://prod.nexus.wa-llet.com/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
